BATCHEE-160 jaxb and derby cleanup